FIX BUG ON MOBILE

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -19,6 +19,7 @@ body {
   height: 100%;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  position: relative;
 }
 
 header,
